# ai-prishtina-chromadb-client

./: README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.chroma/: chroma.sqlite3
data/text/: sample_1.txt  sample_4.txt  sample_5.txt
examples/: application_usage.py
examples/data/documents/: sample.xlsx
models/fine_tuned_model/: README.md
src/ai_prishtina_vectordb/: __init__.py  chroma_features.py  config.py  data_sources.py  database.py  embeddings.py  exceptions.py  features.py  logger.py  metrics.py  validation.py  vectorizer.py
src/ai_prishtina_vectordb/api/: client.py  features.py
tests/: test_cloud_storage_streaming.py  test_data_sources.py  test_database.py  test_embeddings.py  test_features.py  test_metrics.py  test_streaming.py  test_vectorizer.py
